# lens-ui

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  rust-toolchain.toml
.agents/: code-style.md  doc-conventions.md  performance.md  principles.md  (+2 more)
crates/lens-app/: Cargo.toml
crates/lens-app/src/: fleet_verify.rs  loader.rs  main.rs
crates/lens-capture/: Cargo.toml  README.md
crates/lens-capture/src/: main.rs
crates/lens-client/: Cargo.toml
crates/lens-client/benches/: sse_pipeline.rs  terminal_transport.rs
crates/lens-client/src/: client.rs  connection.rs  error.rs  generated.rs  http.rs  ids.rs  info.rs  lib.rs  reconnect.rs  registries.rs  sessions.rs
crates/lens-client/src/stream/: event.rs  mod.rs  normalize.rs  reader.rs  sse.rs
crates/lens-client/src/terminal/: attach.rs  close.rs  mod.rs  rest.rs  wire.rs
crates/lens-client/tests/: live_handshake.rs  live_overhead.rs  live_reachability.rs  live_send_event.rs  live_sessions_lifecycle.rs  live_sessions_read.rs  live_sleep_wake.rs  live_stream.rs  live_taxonomy.rs  taxonomy_drift.rs  terminal_live.rs
crates/lens-client/tests/fixtures/sse/: happy_path.snapshot.json
crates/lens-core/: Cargo.toml
crates/lens-core/benches/: board_pack.rs  persist_throughput.rs  reduce_throughput.rs
crates/lens-core/src/: clock.rs  lib.rs  pack.rs
crates/lens-core/src/actor/: api.rs  feed.rs  mod.rs  outcome.rs  runloop.rs  scheduler.rs  summary.rs  transport.rs
crates/lens-core/src/domain/: board.rs  controls.rs  ids.rs  item.rs  mod.rs  scalars.rs  session.rs  usage.rs
crates/lens-core/src/persist/: board.rs  control.rs  db.rs  map.rs  mod.rs  schema.rs  transcript.rs
crates/lens-core/src/reduce/: folds.rs  items.rs  mod.rs  reconcile.rs  scratch.rs  snapshot.rs  testutil.rs  transforms.rs  update.rs  view.rs
crates/lens-core/tests/: persist_lifecycle.rs  t0_live_rider.rs
crates/lens-core/tests/fixtures/d30/: README.md  tool_fold.items.json  tool_fold.stream.sse
crates/lens-drive/: Cargo.toml  README.md
crates/lens-drive/src/: main.rs
crates/lens-store/: Cargo.toml
crates/lens-store/benches/: apply.rs
crates/lens-store/src/: lib.rs
crates/lens-terminal/: Cargo.toml
crates/lens-terminal-demo/: Cargo.toml
crates/lens-terminal-demo/src/: main.rs
crates/lens-terminal/benches/: engine.rs  render.rs
crates/lens-terminal/src/: bridge.rs  clipboard_policy.rs  generation.rs  hit_test.rs  input_gate.rs  inspect.rs  lib.rs  policy.rs  runtime.rs
crates/lens-terminal/src/engine/: command.rs  forwarder.rs  frame.rs  handle.rs  inspect.rs  key_map.rs  mod.rs  presentation.rs  reconnect_seed.rs  vt.rs  worker.rs
crates/lens-terminal/src/render/: fixtures.rs  inspect.rs  metrics.rs  mod.rs  paint.rs  state.rs
crates/lens-terminal/tests/: input_realwindow.rs  mouse_realwindow.rs  presentation_realwindow.rs  render_realwindow.rs  replay_frame.rs  stream_perf_realwindow.rs  terminal_live.rs
crates/lens-ui/: Cargo.toml
crates/lens-ui/src/: actions.rs  assets.rs  clock.rs  lib.rs  security.rs  shortcuts.rs
crates/lens-ui/src/board/: drag.rs  layout_adapter.rs  mod.rs  replica.rs  rollup.rs
crates/lens-ui/src/card/: chrome.rs  mod.rs  model.rs  motion.rs  view.rs  wave.rs
crates/lens-ui/src/fleet/: fake.rs  live.rs  loader.rs  mod.rs  poller.rs  store.rs  terminal.rs
crates/lens-ui/src/focused/: autolink.rs  content_events.rs  content_key.rs  mod.rs  reader.rs  reasoning.rs  rowsource.rs  streaming.rs  user_content.rs  view.rs
crates/lens-ui/src/md/: global_state.rs  inline.rs  mod.rs  node.rs  stream_flag.rs  text_view.rs  utils.rs
crates/lens-ui/src/md/format/: markdown.rs  mod.rs
crates/lens-ui/src/slot/: mod.rs
crates/lens-ui/src/theme/: lens-dark.json  lens-light.json  mod.rs  tokens.rs
crates/lens-ui/tests/: acceptance_shell.rs  focused_finalize_realwindow.rs  focused_scroll_realwindow.rs  markdown_identity.rs  md_smoke.rs  security_adversarial.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: focused_seed.rs  lib.rs  main.rs  terminal_provenance.rs
crates/xtask/tests/: terminal_provenance.rs
crates/xtask/tests/fixtures/: drifted-openapi.json
crates/xtask/tests/fixtures/terminal-provenance/duplicate-path/: adoption.toml
crates/xtask/tests/fixtures/terminal-provenance/forbidden-adopt/: adoption.toml  compile-closure.txt  provenance.toml
crates/xtask/tests/fixtures/terminal-provenance/missing-license/: adoption.toml
crates/xtask/tests/fixtures/terminal-provenance/missing-license/licenses/: MIT-Ghostty.txt
crates/xtask/tests/fixtures/terminal-provenance/missing-pin/: provenance.toml
crates/xtask/tests/fixtures/terminal-provenance/unknown-disposition/: adoption.toml  build-probe.md  provenance.toml  source-archives.sha256
crates/xtask/tests/fixtures/terminal-provenance/valid/: gpui-reconciliation.md
crates/xtask/tests/fixtures/terminal-provenance/vendor-blank-probe/: build-probe.md  provenance.toml  source-archives.sha256
crates/xtask/tests/fixtures/terminal-provenance/vendor-dup-archive/: source-archives.sha256
crates/xtask/tests/fixtures/terminal-provenance/vendor-one-hash/: adoption.toml  source-archives.sha256
crates/xtask/tests/fixtures/terminal-provenance/vendor-wrong-archive/: build-probe.md  source-archives.sha256  upstream-tests.toml
spikes/board-container/: Cargo.toml  NOTES.md  measure.sh
spikes/board-container/src/: card.rs  container.rs  main.rs  packer.rs  probe.rs
spikes/board-drag/: Cargo.toml
spikes/board-drag/src/: lib.rs  main.rs
spikes/large-transcript/: .gitignore  Cargo.toml
spikes/large-transcript/src/: main.rs
spikes/libghostty-link/: Cargo.toml
spikes/libghostty-link/src/: lib.rs
spikes/markdown-stream/: Cargo.toml  NOTES.md
spikes/markdown-stream/fixtures/: adversarial.md  gfm-stress.md
spikes/markdown-stream/src/: main.rs  probe.rs  render.rs  replay.rs  sanitize.rs
spikes/terminal-attach/: Cargo.toml  README.md
spikes/terminal-attach/src/: main.rs
spikes/terminal-render/: .gitignore  Cargo.toml  MEASUREMENTS.md
spikes/terminal-render/src/: fixtures.rs  main.rs  measure.rs  paint.rs
(+262 files in other folders)
