[workspace]
resolver = "3"
members = ["crates/*", "spikes/*"]

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MIT"
authors = ["Amogh Akshintala"]

# Production bar. Crates under crates/ opt in with `lints.workspace = true`.
# Spikes deliberately do NOT opt in — that is the throwaway/production wall.
[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
