[workspace]
resolver = "3"
members = ["crates/*"]
# Vendored third-party VT binding (build-from-source). EXCLUDED from the
# workspace — not first-party — and consumed only via `path` deps. Being
# non-members, Cargo compiles them with `--cap-lints=allow`, so their upstream
# warnings never trip `cargo clippy --workspace -- -D warnings`; excluding also
# keeps them off the production lint wall. Pin/provenance:
# vendor/libghostty-rs/README.md.
exclude = [
    "vendor/libghostty-rs/libghostty-vt-sys",
    "vendor/libghostty-rs/libghostty-vt",
    # All spikes/* are throwaway/exploratory and deliberately outside the
    # production lint wall — holding exploratory code to `-D warnings` fights its
    # purpose (e.g. a liftable 10-arg signature trips too_many_arguments). They are
    # NOT workspace members; `xtask gate` already scopes to production crates.
    # Build one via `cargo <cmd> --manifest-path spikes/<name>/Cargo.toml`.
    # ADD EVERY NEW SPIKE HERE.
    "spikes/elicitation-form",
    "spikes/large-transcript",
    "spikes/libghostty-link",
    "spikes/markdown-stream",
    "spikes/transcript-virtual",
    "spikes/terminal-render",
    "spikes/terminal-attach",
    "spikes/board-drag",
]

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MIT"
authors = ["Amogh Akshintala"]

# Production bar. Crates under crates/ opt in with `lints.workspace = true`.
# Spikes deliberately do NOT opt in — that is the throwaway/production wall.
[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
