[package]
name = "lens-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Lens native macOS app"

[lints]
workspace = true

[[bin]]
name = "lens-app"
path = "src/main.rs"

[features]
demo = ["lens-ui/demo"]

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
lens-client = { path = "../lens-client" }
lens-core = { path = "../lens-core" }
lens-ui = { path = "../lens-ui" }
url = "2"
