[package]
name = "lens-capture"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "lens_capture"
path = "src/main.rs"

[dependencies]
lens-client = { path = "../lens-client" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
url = "2"
