[package]
name = "lens-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = { version = "2", features = ["serde"] }
# Pattern-validated newtypes in `generated.rs` (e.g. MCP `Name`) compile to
# `regress`-backed regex checks — typify's runtime companion, pulled in by the
# 0.3.0 mcp-servers schemas. Pinned to typify's own regress major.
regress = "0.10"
crossbeam-channel = "0.5"
tokio = { version = "1", default-features = false, features = ["rt", "net", "io-util", "sync", "time", "macros"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
url = "2"

[features]
# Both gate the internal `stream::bench_api` wrappers (additive, independent —
# neither implies the other, so a live-tests build never pulls in the bench harness).
bench = []
live-tests = []
test-util = [] # exposes byte-decode helpers for downstream reducer tests

[[bench]]
name = "sse_pipeline"
harness = false
required-features = ["bench"]
