[package]
name = "lens-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
async-channel = "2"
crossbeam-channel = "0.5"
lens-client = { path = "../lens-client" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
smallvec = "1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
tempfile = "3"
# REVIEW#10: the byte-decode test seam — reducer tests/benches decode raw `.sse` corpus
# bytes into `Vec<ServerStreamEvent>` via lens-client's test-util feature.
lens-client = { path = "../lens-client", features = ["test-util"] }

[[bench]]
name = "reduce_throughput"
harness = false

[[bench]]
name = "persist_throughput"
harness = false
