[package]
name = "lens-drive"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Headless JSON-lines actor driver — dumps state, never renders"

[lints]
workspace = true

[[bin]]
name = "lens-drive"
path = "src/main.rs"

[dependencies]
async-channel = "2"
crossbeam-channel = "0.5"
lens-client = { path = "../lens-client" }
lens-core = { path = "../lens-core" }
serde_json = "1"
url = "2"
