[package]
name = "lens-terminal-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "lens-terminal-demo"
path = "src/main.rs"

[[bin]]
name = "rss_probe"
path = "src/bin/rss_probe.rs"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
lens-client = { path = "../lens-client" }
lens-terminal = { path = "../lens-terminal" }
url = "2"
