[package]
name = "lens-ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Lens UI shell — board, session cards, FleetStore"

[lints]
workspace = true

[dependencies]
anyhow = "1"
async-channel = "2"
crossbeam-channel = "0.5"
futures = "0.3"
gpui = "0.2.2"
gpui-component = "0.5.1"
lens-client = { path = "../lens-client" }
lens-core = { path = "../lens-core" }
rusqlite = { version = "0.32" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"

[features]
demo = []

[[bin]]
name = "focused_finalize_probe"
path = "src/bin/focused_finalize_probe.rs"

[[bin]]
name = "focused_scroll_probe"
path = "src/bin/focused_scroll_probe.rs"

[dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
rusqlite = { version = "0.32", features = ["bundled"] }
