[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# xtask is tooling, not shipped — it does not opt into workspace production lints.

[dependencies]
typify = "0.4"
serde_json = "1"
schemars = "0.8"
prettyplease = "0.2"
syn = "2"
quote = "1"
anyhow = "1"
