[package]
name = "board-drag"
version = "0.0.0"
edition = "2024"
publish = false

# Deliberately NO `[lints] workspace = true` — spikes live outside the production
# lint wall (see root Cargo.toml). Throwaway; de-risks the B-4c drag-drop reverse
# hit-test (ordinal ← cursor over a forward-only masonry). Fold the verdict into the
# B-4c design doc, then delete. Runs via:
#   cargo test --manifest-path spikes/board-drag/Cargo.toml
#   cargo run  --manifest-path spikes/board-drag/Cargo.toml
#
# Depends on the REAL packer (lens-core::pack) rather than a copy, so the hit-test is
# inverted against actual placement, not a re-derivation that could drift from it.
[dependencies]
lens-core = { path = "../../crates/lens-core" }
