[package]
name = "markdown-stream"
version = "0.0.0"
edition = "2024"
publish = false

# Deliberately NO `[lints] workspace = true` — spikes live outside the
# production lint wall (see root Cargo.toml).

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "22.0.0"
