[package]
name = "terminal-attach"
version = "0.0.0"
edition = "2024"
publish = false

# Deliberately NO `[lints] workspace = true` — spikes live outside the
# production lint wall (see root Cargo.toml).

[[bin]]
name = "terminal-attach"
path = "src/main.rs"

[dependencies]
anyhow = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
